<resources>
    <string name="dashboard_title">LIFT BRO</string>
    <string name="dashboard_toolbar_trailing_button_content_description">Add Lift</string>
    <string name="dashboard_toolbar_leading_button_content_description">Settings</string>
    <string name="dashboard_fab_content_description">Add Set</string>
    <string name="lbs">lbs</string>
    <string name="kg">kg</string>
    <string name="reps">reps</string>
    <string name="dashboard_footer_version">Version: %1$s</string>

    <string name="color_picker_dialog_title">Select a Color</string>
    <string name="color_picker_dialog_red">red</string>
    <string name="color_picker_dialog_green">green</string>
    <string name="color_picker_dialog_blue">blue</string>
    <string name="color_picker_positive_cta">Save</string>
    <string name="color_picker_negative_cta">Cancel</string>

    <string name="lift_details_fab_content_description">Add Set</string>

    <string name="dashboard_footer_trailing_button_content_description">Calendar</string>
    <string name="dashboard_footer_leading_button_content_description">Dashboard</string>

    <string name="edit_lift_screen_add_variation_cta_content_description">Add Variation</string>
    <string name="edit_lift_screen_warning_dialog_title">Warning</string>
    <string name="edit_lift_screen_lift_warning_dialog_text">This will delete all variations and sets for this lift, This cannot be undone</string>
    <string name="edit_lift_screen_title">Edit Lift</string>
    <string name="create_lift_screen_title">Create Lift</string>
    <string name="edit_lift_screen_delete_cta_content_description">Delete</string>
    <string name="edit_lift_screen_save_cta_content_description">Save Lift</string>

    <string name="edit_lift_screen_lift_name_placeholder">ex: Squat, Bench Press, Deadlift</string>
    <string name="edit_lift_screen_variation_name_placeholder">ex: Back, Front, Incline</string>
    <string name="edit_lift_screen_variation_delete_cta_content_description">Delete Variation</string>

    <string name="edit_lift_info_dialog_title">What is a Lift?</string>
    <string name="edit_lift_info_dialog_text">A group of <b>Variations/Movements</b>\n\nex: A Squat can have many variations such as Front and Back Squat\n\nOnce you name your lift you can start creating Variations of that lift!\nThink of it as the "suffix" of a movement\n\nRomanian *Deadlift*\nFront *Squat*\nIncline *Bench Press*\n</string>
    <string name="edit_lift_variation_heading">Variations</string>
    <string name="edit_lift_variation_warning_dialog_text">This will delete all sets for this variation, This cannot be undone</string>

    <string name="edit_lift_screen_warning_dialog_positive_cta">Okay!</string>
    <string name="edit_lift_screen_warning_dialog_negative_cta">Nevermind</string>

    <string name="dashboard_empty_title">Do you even Lift Bro?</string>
    <string name="dashboard_empty_primary_cta_title">Create Lift</string>
    <string name="dashboard_empty_secondary_cta_title">Restore a Backup</string>

    <string name="toolbar_back_button_content_description">Back</string>

    <string name="backup_dialog_title">Its been a while...</string>
    <string name="backup_dialog_message">Lift Bro is a local only application, If you lose your phone all your data is gone! Would you like to backup now?</string>
    <string name="backup_dialog_primary_cta">Backup Now</string>
    <string name="backup_dialog_secondary_cta">Ignore</string>

    <string name="lift_card_empty_title">No Sets!</string>
    <string name="lift_card_empty_subtitle">Tap to add one</string>

    <string name="toolbar_update_button_content_description">Update Lift Bro</string>
    <string name="toolbar_calculator_button_content_description">Update Lift Bro</string>

    <string name="weight_selector_chin_title">%1$d% of %2$s Max</string>
    <string name="weight_selector_chin_subtitle">%1$d% of %2$s Max</string>

    <string name="date_selector_dialog_confirm_button_text">Ok</string>
    <string name="date_selector_dialog_dismiss_button_text">Close</string>
    <string name="date_selector_title">On</string>

    <string name="create_set_screen_title">I Crushed</string>
    <string name="edit_set_screen_title">You Crushed</string>
    <string name="edit_set_screen_delete_acc_label">Delete</string>
    <string name="edit_set_screen_save_cta_content_description">Save Set</string>
    <string name="edit_set_screen_create_lift_cta">Create Lift</string>

    <string name="edit_set_screen_variation_selector_empty_state_title">Select Lift</string>

    <string name="edit_set_screen_variation_selector_lift_max">%s Max: %s</string>
    <string name="edit_set_screen_variation_selector_variation_max">%s Max: %s</string>
    <string name="edit_set_screen_variation_selector_no_lift_max">None</string>
    <string name="edit_set_screen_variation_selector_no_variation_max">None</string>
    <string name="edit_set_screen_extra_notes_label">Extra Notes: (optional)</string>
    <string name="edit_set_screen_extra_notes_placeholder">I killed it today!</string>

    <string name="excercise_screen_title">Exercise</string>
    <string name="excercise_screen_duplicate_cta">Duplicate Last Set</string>
    <string name="excercise_screen_new_set_cta">Add New Set</string>
    <string name="excercise_string_title_date_format">EEEE, MMMM d - yyyy</string>


    <!-- ONBOARDING -->
    <string name="onboarding_page_one_title">CHOOSE\nYOUR\nLIFT BRO</string>
    <string name="onboarding_page_one_cta">Continue</string>
    <string name="onboarding_leo_content_description">Lift Bro With Short Hair</string>
    <string name="onboarding_lisa_content_description">Lift Bro With A Ponytail</string>


    <string name="onboarding_consent_screen_title">BEFORE WE GET STARTED</string>
    <string name="onboarding_consent_screen_subtitle">Did you read these?</string>
    <string name="onboarding_consent_screen_consent">I have read and agree to the %1$s and %2$s</string>
    <string name="onboarding_consent_screen_consent_checkbox_content_description">Consent</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="onboarding_skip_screen_title">LETS\nGOOOOO!</string>
    <string name="onboarding_skip_screen_subtitle">How would you like to get things started?</string>

    <string name="workout_calendar_edit_daily_notes_cta">Edit Daily Notes</string>

    <string name="settings_title">Settings</string>

    <string name="settings_uom_title">Default Unit of Measure</string>
    <string name="settings_theme_title">Theme</string>
    <string name="settings_theme_option_one">System</string>
    <string name="settings_theme_option_two">Light</string>
    <string name="settings_theme_option_three">Dark</string>

    <string name="settings_backup_restore_title">Backup / Restore</string>
    <string name="settings_backup_cta">Backup</string>
    <string name="settings_restore_cta">Restore</string>

    <string name="settings_other_title">Other:</string>
    <string name="settings_other_discord_cta">Join the Discord!</string>
    <string name="settings_other_github_cta">Check out the Source Code</string>

    <string name="settings_experimental_title">Experimental</string>
    <string name="settings_experimental_message">Features here are experimental, and could break app functionality, use with caution!</string>
    <string name="settings_experimental_input_placeholder">What's the magic word?</string>
    <string name="settings_experimental_input_password">pizza</string>

    <string name="settings_mer_title">Maximally Effective Reps (MERs)</string>
    <string name="settings_mer_enable_text">Show MER calculations</string>
    <string name="settings_mer_fatigue_input_title">Fatigue Threshold</string>
    <string name="settings_mer_fatigue_info_dialog_title">Fatigue Threshold</string>
    <string name="settings_mer_fatigue_info_dialog_paragraph_one">The % fatigue that you must hit of your max for a rep to be considered a MER (default 80%), This can be calculated by taking a look at your Max</string>
    <string name="settings_mer_fatigue_info_dialog_paragraph_two">ex: if you have a 100lbs max Bench Press and you do one rep at 80lbs. This is above the threshold of 80% and therefore an MER!</string>

    <string name="settings_twm_title">Total Weight Moved (TWM)</string>
    <string name="settings_twm_enable_text">Show TWM calculations where applicable</string>
    <string name="settings_twm_fatigue_info_dialog_title">Total Weight Moved</string>
    <string name="settings_twm_fatigue_info_dialog_paragraph_one">Total weight that you moved for a given set/excercise/workout!</string>


    <string name="settings_emax_title">Estimate/Theoretical Max</string>
    <string name="settings_emax_enable_text">Show estimated one rep maxes (eMax) where applicable</string>
    <string name="settings_tmax_enable_text">Show theoretical one rep maxes (tMax) where applicable</string>
    <string name="settings_emax_info_dialog_title">eMax/tMax</string>
    <string name="settings_emax_formula">weight x (1 + reps/30)</string>
    <string name="settings_emax_info_dialog_h1">eMax - Estimated Max</string>
    <string name="settings_emax_info_dialog_p1">An estimate for your one rep max for a variation, when you DO NOT have a one rep max, when enabled this value will be shown and used in place for a "regular" one rep max</string>
    <string name="settings_emax_info_dialog_p1_ex">ex: My heaviest deadlift is 5 x 225 lbs, following the formula\neMax = 225 x (1 + 5/30) = ~262 lbs!\nthis value will be used when calculating % max, mers, or celebrations!</string>
    <string name="settings_emax_info_dialog_h2">tMax - Theoretical Max</string>
    <string name="settings_emax_info_dialog_p2">An estimate for your one rep max for a variation when you DO have a one rep max, when enabled this value will be shown, but not used for calculations</string>
    <string name="settings_emax_info_dialog_p2_ex">ex: My one rep deadlift is 250 lbs but I JUST killed a set and did 5 x 225 lbs, following our previous calculations I, in theory, could be lifting 262! This will be shown, but my actual (successful) ORM of 250 will still be used for calculations or celebrations</string>


    <string name="settings_mer_weekly_goal_input_title">Weekly MER Goal</string>
    <string name="settings_mer_weekly_goal_info_dialog_title">Weekly MER Goal</string>
    <string name="settings_mer_weekly_goal_info_dialog_message">MER's can be used to track your progress in a week! Set yourself a weekly goal and celebrate your successes!</string>


    <string name="consent_dialog_title">We made some updates</string>
    <string name="consent_dialog_cta">I Accept</string>

    <string name="edit_daily_notes_dialog_title">Notes for: %1$s</string>
    <string name="edit_daily_notes_dialog_placeholder">Goals for today?
Feeling especially spicy?
Soreness or pain?</string>
    <string name="edit_daily_notes_dialog_confirm_cta">Save</string>
    <string name="edit_daily_notes_dialog_dismiss_cta">Cancel</string>
</resources>