...
    <string name="consent_dialog_title">We made some updates</string>

    <string name="create_lift_screen_title">Create Lift</string>
    <string name="create_set_screen_title">I Crushed</string>

    <string name="dashboard_empty_primary_cta_title">Create Category</string>
    <string name="dashboard_empty_secondary_cta_title">Restore a Backup</string>
    <string name="dashboard_empty_title">Do you even Lift Bro?</string>
    <string name="dashboard_fab_content_description">Add Set</string>
    <string name="dashboard_footer_leading_button_content_description">Dashboard</string>
    <string name="dashboard_footer_trailing_button_content_description">Calendar</string>
    <string name="dashboard_footer_version">Version: %1$s</string>
    <string name="dashboard_lift_header_title">Categories</string>
...
    <string name="edit_lift_info_dialog_text">A group of <b>Variations/Movements</b>\n\nex: A Squat can have many variations such as Front and Back Squat\n\nOnce you name your lift you can start creating Variations of that lift!\nThink of it as the "suffix" of a movement\n\nRomanian *Deadlift*\nFront *Squat*\nIncline *Bench Press*\n</string>
    <string name="edit_lift_info_dialog_title">What is a Lift?</string>
    <string name="edit_lift_screen_add_variation_cta_content_description">Add Variation</string>
    <string name="edit_lift_screen_delete_cta_content_description">Delete</string>
    <string name="edit_lift_screen_lift_name_placeholder">ex: Squat, Bench Press, Deadlift</string>
    <string name="edit_lift_screen_lift_warning_dialog_text">This will delete all variations and sets for this lift, This cannot be undone</string>
    <string name="edit_lift_screen_save_cta_content_description">Save Lift</string>
    <string name="edit_lift_screen_title">Edit Category</string>
    <string name="edit_lift_screen_variation_delete_cta_content_description">Delete Variation</string>
    <string name="edit_lift_screen_variation_name_placeholder">ex: Back, Front, Incline</string>
    <string name="edit_lift_screen_variation_warning_dialog_text">This will delete all sets for this variation. This cannot be undone</string>
    <string name="edit_lift_screen_warning_dialog_negative_cta">Nevermind</string>
    <string name="edit_lift_screen_warning_dialog_positive_cta">Okay!</string>
    <string name="edit_lift_screen_warning_dialog_title">Warning</string>
    <string name="edit_lift_variation_heading">Variations</string>
...
    <string name="lift_card_empty_title">No Sets!</string>
    <string name="lift_details_fab_content_description">Add Set</string>
    <string name="lift_details_screen_edit_content_description">Edit</string>
    <string name="lift_details_screen_empty_state_text">No variations yet. Tap + to add a set.</string>
    <string name="lift_details_screen_favourite_content_description">Favourite</string>
...

    <string name="onboarding_consent_screen_consent">I have read and agree to the %1$s and %2$s</string>
    <string name="onboarding_consent_screen_consent_checkbox_content_description">Consent</string>
    <string name="onboarding_consent_screen_subtitle">Did you read these?</string>
    <string name="onboarding_consent_screen_title">BEFORE WE GET STARTED</string>
    <string name="onboarding_leo_content_description">Lift Bro With Short Hair</string>
    <string name="onboarding_lisa_content_description">Lift Bro With A Ponytail</string>
    <string name="onboarding_page_one_cta">Continue</string>
    <string name="onboarding_page_one_title">CHOOSE\nYOUR\nLIFT BRO</string>
    <string name="onboarding_setup_screen_continue_cta">Continue</string>
...
    <string name="rep_weight_selector_table_rpe_9">9</string>
    <string name="rep_weight_selector_times_symbol">x</string>
    <string name="reps">reps</string>

    <string name="server_settings_row_current_ip">Current IP is %1$s</string>
...
    <string name="timer_screen_set_count_cta">x%1$d</string>
    <string name="timer_screen_title">Timer</string>
    <string name="toolbar_back_button_content_description">Back</string>
    <string name="toolbar_calculator_button_content_description">Update Lift Bro</string>
    <string name="toolbar_calculator_content_description">Calculator</string>
...

    <string name="variation_details_add_notes_cta">Add Notes</string>
    <string name="variation_details_notes_label">Notes</string>
    <string name="variation_details_notes_placeholder">Toes pointed out, Squeeze core...</string>
    <string name="variation_details_screen_add_set_content_description">Add Set</string>
...
    <string name="weight_selector_chin_title">%1$d% of %2$s Max</string>

    <string name="workout_add_exercise_cta">Add Exercise</string>
    <string name="workout_add_finisher_cta">Add Finisher</string>
    <string name="workout_add_warmup_cta">Add Warmup</string>
...
    <string name="workout_calendar_screen_other_gains_subtitle">Tap to add to Workout</string>
    <string name="workout_calendar_screen_other_gains_title">Other Gains!</string>
    <string name="workout_calendar_screen_start_workout_cta">Start a Workout!</string>
    <string name="workout_calendar_screen_warmup_label">Warmup:</string>
    <string name="workout_finisher_label">Finisher</string>
...
    <string name="workout_section_card_secondary_cta">Delete %1$s</string>
    <string name="workout_section_card_warning_dialog_title">This will delete all sets in this workout, are you sure?</string>
    <string name="workout_section_card_item_cta">Duplicate Last Set</string>
    <string name="workout_screen_most_recent_set_text">Most Recent Set - %1$s</string>
    <string name="workout_screen_next_content_description">Next</string>
...
    <string name="wrapped_landing_next_button_content_description">Next</string>
    <string name="wrapped_progress_header_title">You made some GREAT Progress this year!</string>
    <string name="wrapped_progress_screen_back_squat_title">Back Squat</string>
    <string name="wrapped_progress_screen_bench_press_title">Bench Press</string>
    <string name="wrapped_progress_screen_dead_lift_title">Dead Lift</string>
    <string name="wrapped_progress_screen_favourite_content_description">Favourite</string>
...
