...
                            .aspectRatio(1f),
                        backgroundColor = Color.White,
                        onClick = { uom = UOM.POUNDS },
                        selected = uom == UOM.POUNDS,
                    ) {
                        Text(
                            "LBS",
                            style = MaterialTheme.typography.displayLarge
                        )
                    }

                    RadioButtonCard(
                        modifier = Modifier.weight(1f)
...
