appId: com.lift.bro
---
- runFlow:
    file: flows/skip_onboarding.yaml

- tapOn: "Create Lift"
- assertVisible: "ex: Squat, Bench Press, Deadlift"

- tapOn: "ex: Squat, Bench Press, Deadlift"
- inputText: "Bench Press"

# Add all 3 types of variations, one populated, one "tampered with" and one empty
- tapOn: "Add Variation"
- tapOn: "ex: Back, Front, Incline"
- inputText: " "

- tapOn: "Add Variation"
- tapOn: "ex: Back, Front, Incline"
- inputText: "Incline"

- tapOn: "Add Variation"

- tapOn: "Back"
- tapOn: "Bench Press"

- assertVisible: "Bench Press"
- assertVisible: "Incline Bench Press"

- tapOn: "Edit"
- tapOn: "Delete"
- tapOn: "Okay!"

# assert empty state is shown again
- assertVisible: "Do you even Lift Bro?"